[package]
name = "mangata-types"
version = "0.1.0"
authors = ["Mangata team"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { default-features = false, features = ["derive", "alloc"], optional = true, workspace = true }

sp-core = { version = "28.0.0", default-features = false, path = "../core" }
sp-runtime = { version = "31.0.1", default-features = false, path = "../runtime" }
sp-std = { default-features = false, path = "../std" }

[features]
default = ["std"]
std = [
	"serde/std",
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
# Serde support without relying on std features.
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
