[package]
name = "sp-runtime"
version = "24.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage = "https://substrate.io"
repository.workspace = true
description = "Runtime Modules shared primitive types."
documentation = "https://docs.rs/sp-runtime"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
alloy-sol-types = { version = "0.5.0", default-features = false }
alloy-primitives = { version = "0.5.0", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
either = { version = "1.5", default-features = false }
hash256-std-hasher = { version = "0.15.2", default-features = false }
impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", default-features = false }
parity-util-mem = { version = "0.12.0", default-features = false, features = ["primitive-types"] }
paste = "1.0"
rand = { version = "0.8.5", optional = true }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"], optional = true }
sp-application-crypto = { path = "../application-crypto", default-features = false}
sp-arithmetic = { path = "../arithmetic", default-features = false}
sp-core = { path = "../core", default-features = false}
sp-io = { path = "../io", default-features = false}
sp-std = { path = "../std", default-features = false}
sp-weights = { path = "../weights", default-features = false}


blake2-rfc = { version = "0.2.18", default-features = false, optional = true }
impl-serde = { version = "0.3.1", default-features = false }
libsecp256k1 = { version = "0.7", default-features = false, features = [ "hmac" ]  }
sha3 = { version = "0.10", default-features = false }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.107"
zstd = { version = "0.12.4", default-features = false }
sp-api = { path = "../api" }
sp-state-machine = { path = "../state-machine" }
sp-tracing = { path = "../tracing" }
substrate-test-runtime-client = { path = "../../test-utils/runtime/client" }
hex-literal = "0.3.4"
hex = { version = "0.4.3", default-features = false }

[features]
runtime-benchmarks = []
try-runtime = []
default = ["std"]
std = [
	"codec/std",
	"either/use_std",
	"hash256-std-hasher/std",
	"parity-util-mem/std",
	"log/std",
	"rand",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-application-crypto/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-state-machine/std",
	"sp-std/std",
	"sp-tracing/std",
	"sp-weights/std",
	"alloy-sol-types/std",
	"alloy-primitives/std",
	"serde/std",
	"sha3/std",
	"full_crypto",
	"hex/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"blake2-rfc/std",
]

# Serde support without relying on std features.
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-application-crypto/serde",
	"sp-arithmetic/serde",
	"sp-core/serde",
	"sp-weights/serde",
]


full_crypto = [
	"blake2-rfc",
]
